--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -30,4 +30,4 @@ jobs:
           git config --global user.email "actions@github.com"
           git add hamar.csv
           git commit -m "Oppdater CSV" || echo "Ingen endringer"
-          git push
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} HEAD:main
