--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-          git add hamar.csv
+          git add meta.csv google.csv
           git commit -m "Oppdater CSV" || echo "Ingen endringer"
           git push https://x-access-token:$TOKEN@github.com/${{ github.repository }} HEAD:main
