--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -34,5 +34,6 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
           git add meta.csv google.csv
+          git pull --rebase origin main
           git commit -m "Oppdater CSV" || echo "Ingen endringer"
           git push https://x-access-token:$TOKEN@github.com/${{ github.repository }} HEAD:main
