--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Sjekk ut koden
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Henter hele git-historikken
 
       - name: Sett opp Python
         uses: actions/setup-python@v5
