--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,9 +1,9 @@
-name: Kjør scraper hver time
+name: Kjør scraper hver dag
 
 on:
   schedule:
-    - cron: "0 6 * * *" # Hver dag
-  workflow_dispatch: # Lar deg kjøre manuelt fra GitHub
+    - cron: "0 6 * * *" # daglig 06:00
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -15,7 +15,7 @@ jobs:
       - name: Sjekk ut koden
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Henter hele git-historikken
+          fetch-depth: 0 # viktig!
 
       - name: Sett opp Python
         uses: actions/setup-python@v5
@@ -35,7 +35,11 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
+          git remote set-url origin https://x-access-token:$TOKEN@github.com/${{ github.repository }}
+
           git add meta.csv google.csv
-          git pull --rebase https://x-access-token:$TOKEN@github.com/${{ github.repository }} main
-          git commit -m "Oppdater CSV" || echo "Ingen endringer"
-          git push https://x-access-token:$TOKEN@github.com/${{ github.repository }} HEAD:main
+          git diff --cached --quiet && echo "Ingen endringer" && exit 0
+
+          git commit -m "Oppdater CSV"
+          git pull --rebase origin main
+          git push origin HEAD:main
